--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2022-07-25  Jose E. Marchesi  <jemarch@gnu.org>
+
+	* configure.ac: Bump version to 2.4.
+	* doc/gendocs_template: Likewise.
+	* NEWS: Add entries for 2.4.
+
 2022-07-19  Jose E. Marchesi  <jemarch@gnu.org>
 
 	* doc/poke.texi (qsort): Add example of a comparator function for
