--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2022-09-18  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>
 
+	* pickles/elf-64.pk (Elf64_File.get_sections_by_name): Use `apush'.
+	(Elf64_File.get_sections_by_type): Likewise.
+	(Elf64_File.get_group_signatures): Likewise.
+	(Elf64_File.get_section_group): Likewise.
+
+2022-09-18  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>
+
 	* pickles/riscv.pk: New pickle for RISC-V RV32I instruction set.
 	* pickles/Makefile.am (dist_pickles_DATA): Update.
 	* etc/hacking.org (Maintainers): Add myself as the maintainer of
