Support for computed fields in struct types.
This patch adds support for computed fields to Poke struct types.  A
"computed field" is a field that has no real storage in the resulting
struct values, but instead both its value and the side effect of
assigning to it are computed every time the field is referred.

Each computed field

    computed FIELD_TYPE FIELD_NAME;

must be accompanied by a pair of setter/getter methods:

   method get_FIELD_NAME = FIELD_TYPE: { ... }
   method set_FIELD_NAME = (FIELD_TYPE val) void: { ... }

The getter is invoked every time the computed field is referred in a
r-value context, whereas the setter is invoked every time the computed
field is referred in a l-value context.

A couple of examples:

type Foo =
  struct
  {
    int<32> imm_hi;
    int<32> imm_lo;

    computed int<64> imm;

    method get_imm = int: { return i ::: j; }
    method set_imm = (int val) void: { i = val & 0xffff <<. 32; j = val & 0xffff; }
  };

type ID3V1_Tag =
  struct
  {
    char[30] title;

    computed string title_str;

    method get_title_str = string: { return rtrim (catos (_title)); }
    method set_title_str = (string val) void: { stoca (val, title, ' '); }
  }

2022-09-22  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-lex.l: Recognize token COMPUTED.
	* libpoke/pkl-ast.h (PKL_AST_STRUCT_TYPE_FIELD_COMPUTED_P): Define.
	(struct pkl_ast_struct_type_field): New field computed_p.
	(struct pkl_ast_type): New field `ncfield' for struct types.
	(PKL_AST_TYPE_S_NCFIELD): Define.
	* libpoke/pkl-ast.c (pkl_ast_print_1): Print the computed_p
	attribute of struct type fields.
	(pkl_ast_sizeof_type): Do not count computed fields for the size
	of the struct.
	(pkl_ast_dup_type): Duplicate computed flag in struct type fields.
	(pkl_ast_type_mappable_p): Do not include computed fields in
	determining whether a struct type is mappable.
	(pkl_ast_type_is_complete): Do not include computed fields in
	determining whether a struct type is complete.
	(pkl_ast_typ

--- a/doc/poke.texi
+++ b/doc/poke.texi
@@ -10770,6 +10770,7 @@ They contain heterogeneous collections of values.
 * Casting Structs::		Converting structs from one type to another.
 * Declarations in Structs::	Declaring stuff within a struct.
 * Methods::			Declaring struct methods.
+* Computed Fields::             Simulating fields with methods.
 * Struct Attributes::		Accessing properties of struct values.
 @end menu
 
@@ -11887,6 +11888,76 @@ the struct value whose method is being used.
 
 Methods can refer to the fields of the containing struct type that
 have been defined before the method itself, by name.
+
+@node Computed Fields
+@subsection Computed Fields
+@cindex fields, computed
+
+A @dfn{computed field} declaration in a struct or union type has the form:
+
+@example
+computed @var{field_type} @var{field_name};
+@end example
+
+@noindent
+Where @var{field_type} is a type specifier denoting the type of the
+computed field, and @var{field_name} is an identifier.  Note that,
+unlike regular fields, computed fields cannot have endianness
+annotations, constraints defined for them, cannot be optional, nor
+have initialization values.
+
+Computed fields are not really stored in the corresponding struct
+values: their value is computed every time they are referred, by
+invoking a couple of methods that the user should define:
+
+@itemize @minus
+@item
+A @strong{getter} method with name @code{get_@var{field_name}} and
+signature @code{()@var{field_type}}.
+
+This getter is used to compute the value of the computed field when it
+is referenced as a r-value.
+@item
+A @strong{setter} method with name @code{set_@var{field_name}} and
+signature @code{(@var{field_type})void}.
+
+This setter is called when the computed field is assigned to in a
+l-value.
+@end itemize
+
+For example, consider the following struct denoting a RISC-V
+instruction where the immediate is distributed in several chunks:
+
+@example
+type RV32_InsnFmt_J = struct uint<32>
+  @{
+    uint<1>   imm20;
+    uint<10>  imm10_1;
+    uint<1>   imm11;
+    uint<8>   imm19_12;
+    RV_Reg    rd;
+    RV_Opcode opcode : opcode in RV_OPCODES_J;
+
+    computed int<32> imm;
+
+    method get_imm = int<32>:
+    @{
+      return imm20:::imm19_12:::imm11:::imm10_1:::0b as int<20>;
+    @}
+
+    method set_imm = (int<32> imm) void:
+    @{
+      imm20 = (imm .>> 20) & 1;
+      imm10_1 = (imm .>> 19) & 0x3ff;
+      imm11 = (imm .>> 10) & 1;
+      imm19_12 = (imm .>> 19) & 0xff;
+    @}
+ @};
+@end example
+
+@noindent
+When we create a value of type @code{RV32_InsnFmt_J} we can then
+access the computed field @code{imm} like any other normal field.
 
 @node Struct Attributes
 @subsection Struct Attributes
