--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2022-09-22  Jose E. Marchesi  <jemarch@gnu.org>
+
+	* libpoke/pkl-ast.h (PKL_AST_DECL_TYPE): Remove.
+
 2022-09-18  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>
 
 	* pickles/elf-32.pk (Elf32_File.get_section_name): New method.
