--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2022-09-22  Jose E. Marchesi  <jemarch@gnu.org>
 
+	* pickles/pk-table.pk: Do not use standard types.
+
+2022-09-22  Jose E. Marchesi  <jemarch@gnu.org>
+
 	* pickles/mbr.pk (MBR_CHS): Add computed field `cylinder'.
 	* testsuite/poke.pickles/mbr-test.pk: Adapt accordingly.
 
