pickles: ios.pk: do not use standard types
This makes it possible to use ios.pk in applications like GDB that do
not load std-types.pk.

2022-09-22  Jose E. Marchesi  <jemarch@gnu.org>

	* pickles/ios.pk: Do not use standard types.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2022-09-22  Jose E. Marchesi  <jemarch@gnu.org>
 
+	* pickles/ios.pk: Do not use standard types.
+
+2022-09-22  Jose E. Marchesi  <jemarch@gnu.org>
+
 	* pickles/pk-table.pk: Do not use standard types.
 
 2022-09-22  Jose E. Marchesi  <jemarch@gnu.org>
